--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^0.9.0",
     "feedparser": "^0.19.2",
     "moment": "^2.8.3",
+    "node-schedule": "^0.1.13",
     "phantom": "^0.6.5",
     "q": "^1.0.1",
     "request": "^2.45.0"
